--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,134 @@
 .App {
+  font-family: 'Oxygen';
+  line-height: 1.5em;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #222;
+  border-bottom: 2px solid rgb(202, 241, 228);
+  height: 100px;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.footer {
+  background-color: #222;
+  color: white;
+  height: 50px;
+  line-height: 50px;
+  margin-top: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.App-title {
+  font-size: 2.4em;
+  line-height: 100px;
+}
+
+@media screen and (max-width: 480px) {
+  .App-title {
+    font-size: 1.5em;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+#contents h2 {
+  font-size: 1.8em;
+  margin: 30px 0 10px;
+  padding-bottom: 5px;
+  border-bottom: 3px solid rgb(202, 241, 228);
+}
+
+#contents h3 {
+  margin: 20px 0 5px;
+}
+
+#navi {
+  background-color: #aee0e4;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#navi a {
+  display: inline-block;
+  width: 120px;
+  padding: 10px;
+  border-left: 2px solid #eee;
+  color: #333;
+  box-sizing: border-box;
+}
+
+@media screen and (min-width:450px) and (max-width: 740px) {
+  #navi-box {
+    width: 450px;
   }
+
+  #navi a {
+    width: 150px;
+  }
+
+  #navi a:nth-child(3) {
+    border-right: 2px solid #eee;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  #navi-box {
+    width: 300px;
+  }
+
+  #navi a {
+    width: 50%;
+  }
+
+  #navi a:nth-child(even) {
+    border-right: 2px solid #eee;
+  }
+}
+
+#navi a:hover {
+  background-color: white;
+}
+
+#navi a:last-child {
+  border-right: 2px solid #eee;
+}
+
+.card {
+  width: 300px;
+  padding: 10px;
+  margin: 10px 10px;
+  border: 2px solid #eeeeee;
+}
+
+.card img {
+  width: 100%;
+}
+
+ul {
+  margin: 5px;
+}
+
+#contents {
+  width: 700px;
+  margin: 0 auto;
+  padding: 0 30px;
+  text-align: left;
+}
+
+@media screen and (max-width: 480px) {
+  #contents {
+    width: 300px;
+  }
+}
+
+#card_area {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(16, 172, 120);
 }
