--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Gothic MB101 Light',
+  'Hiragino Kaku Gothic W3 JIS2004',
+  'メイリオ',
+  'Meiryo',
+  'Verdana',
+  'ＭＳＰゴシック',
+  'sans-serif';
 }
